--- a/styles/app.css
+++ b/styles/app.css
@@ -1,7 +1,12 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@tailwind variants;
+@tailwind variants; */
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import "tailwindcss/variants";
+@import "../app/components/blog/blog.css";
 
 .root,
 :root,
@@ -42,7 +47,6 @@
   src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff") format("woff");
   src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff2") format("woff2");
 }
-
 @layer components {
   .btn {
     @apply py-2 px-4 font-semibold rounded-lg shadow-lg;
@@ -60,10 +64,6 @@
   }
   .svgChildHover-color svg {
     fill: #000;
-  }
-
-  .blog-content a {
-    @apply text-green-600 underline hover:text-green-400;
   }
 }
 
@@ -98,19 +98,6 @@
     @apply translate-y-[0px];
   }
 
-  .blog-content p:first-child {
-    @apply text-lg mb-8 tablet:text-xl tablet:mb-10;
-  }
-
-  .blog-content h5 {
-    @apply font-sentinel__SemiBoldItal text-primary-600 mb-8 text-2xl;
-  }
-
-  .blog-content li {
-    @apply text-lg mb-4;
-    list-style-type: disc;
-  }
-
   .input-basic {
     @apply text-neutral-500 bg-neutral-100 outline-none border-0 py-4 px-5 rounded-lg w-full mb-4 ring-offset-white ring-offset-4 transform transition-all;
   }
@@ -121,5 +108,9 @@
 
   .input-error {
     @apply ring ring-red-500;
+  }
+
+  .textarea-basic {
+    @apply text-neutral-500 bg-neutral-100 outline-none border-0 py-4 px-5 rounded-lg w-full;
   }
 }
