--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -627,6 +627,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .right-\[0px\] {
   right: 0px;
 }
+.top-\[50\%\] {
+  top: 50%;
+}
 .z-10 {
   z-index: 10;
 }
@@ -725,6 +728,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -742,9 +749,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-3 {
   margin-bottom: 0.75rem;
-}
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -769,6 +773,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mt-4 {
   margin-top: 1rem;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 .mr-4 {
   margin-right: 1rem;
@@ -893,8 +900,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-\[60px\] {
   height: 60px;
 }
-.max-h-\[304px\] {
-  max-height: 304px;
+.h-\[300px\] {
+  height: 300px;
+}
+.h-\[250px\] {
+  height: 250px;
 }
 .min-h-fullBot {
   min-height: calc(100vh - env(safe-area-inset-bottom));
@@ -1435,6 +1445,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-\[24px\] {
   padding-left: 24px;
   padding-right: 24px;
+}
+.px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .pb-2 {
   padding-bottom: 0.5rem;
@@ -2539,6 +2553,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:mr-4 {
     margin-right: 1rem;
   }
+  .laptop\:mb-7 {
+    margin-bottom: 1.75rem;
+  }
+  .laptop\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
   .laptop\:block {
     display: block;
   }
@@ -2753,6 +2773,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+  .desktop\:text-h3 {
+    font-size: 2.063rem;
+    line-height: 2.5rem;
   }
   .desktop\:leading-6 {
     line-height: 1.5rem;
