--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -764,6 +764,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .top-\[64px\] {
   top: 64px;
 }
+.left-\[100px\] {
+  left: 100px;
+}
 .z-10 {
   z-index: 10;
 }
@@ -846,6 +849,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.mx-\[-1rem\] {
+  margin-left: -1rem;
+  margin-right: -1rem;
+}
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -871,14 +878,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 1.25rem;
 }
 .mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-.mx-\[-1rem\] {
-  margin-left: -1rem;
-  margin-right: -1rem;
-}
-.mx-\[1rem\] {
   margin-left: 1rem;
   margin-right: 1rem;
 }
@@ -1107,11 +1106,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-\[60px\] {
   height: 60px;
 }
+.h-\[500px\] {
+  height: 500px;
+}
 .h-\[7px\] {
   height: 7px;
 }
 .h-\[147px\] {
   height: 147px;
+}
+.h-\[100\%\] {
+  height: 100%;
+}
+.h-\[1000px\] {
+  height: 1000px;
 }
 .max-h-60 {
   max-height: 15rem;
@@ -1233,6 +1241,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[32px\] {
   width: 32px;
 }
+.w-\[70\%\] {
+  width: 70%;
+}
+.w-\[60\%\] {
+  width: 60%;
+}
 .min-w-\[320px\] {
   min-width: 320px;
 }
@@ -1262,6 +1276,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-w-\[278px\] {
   max-width: 278px;
+}
+.max-w-\[250px\] {
+  max-width: 250px;
 }
 .max-w-\[249px\] {
   max-width: 249px;
@@ -1293,6 +1310,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-sm {
   max-width: 24rem;
 }
+.max-w-\[275px\] {
+  max-width: 275px;
+}
 .max-w-\[743px\] {
   max-width: 743px;
 }
@@ -1308,9 +1328,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[300px\] {
   max-width: 300px;
 }
-.max-w-\[410px\] {
-  max-width: 410px;
-}
 .max-w-\[110px\] {
   max-width: 110px;
 }
@@ -1320,26 +1337,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[347px\] {
   max-width: 347px;
 }
-.max-w-\[200px\] {
-  max-width: 200px;
-}
-.max-w-\[250px\] {
-  max-width: 250px;
-}
-.max-w-\[375px\] {
-  max-width: 375px;
-}
-.max-w-\[325px\] {
-  max-width: 325px;
-}
-.max-w-\[355px\] {
-  max-width: 355px;
-}
-.max-w-\[255px\] {
-  max-width: 255px;
-}
-.max-w-\[275px\] {
-  max-width: 275px;
+.max-w-\[1450px\] {
+  max-width: 1450px;
 }
 .flex-\[1\] {
   flex: 1;
@@ -1359,8 +1358,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-1 {
   flex: 1 1 0%;
 }
-.flex-\[0_1_50\%\] {
-  flex: 0 1 50%;
+.flex-initial {
+  flex: 0 1 auto;
 }
 .flex-shrink-0 {
   flex-shrink: 0;
@@ -1609,6 +1608,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1;
   border-color: rgb(205 167 167 / var(--tw-border-opacity));
 }
+.border-sage-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(208 216 217 / var(--tw-border-opacity));
+}
 .border-success-400 {
   --tw-border-opacity: 1;
   border-color: rgb(143 177 177 / var(--tw-border-opacity));
@@ -1616,10 +1619,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-neutral-400 {
   --tw-border-opacity: 1;
   border-color: rgb(208 201 205 / var(--tw-border-opacity));
-}
-.border-sage-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(208 216 217 / var(--tw-border-opacity));
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -1725,6 +1724,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .bg-primary-50 {
   background-color: var(--primary-plum-50);
+}
+.bg-coolGray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+.bg-slate-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+.bg-sage-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(208 216 217 / var(--tw-bg-opacity));
 }
 .bg-contain {
   background-size: contain;
@@ -1838,6 +1853,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 38px;
   padding-right: 38px;
 }
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1862,10 +1881,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
 .py-\[1\.13rem\] {
   padding-top: 1.13rem;
   padding-bottom: 1.13rem;
@@ -1882,6 +1897,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
+.py-\[13px\] {
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
 .py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -1893,18 +1912,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-\[30px\] {
   padding-top: 30px;
   padding-bottom: 30px;
-}
-.py-\[14px\] {
-  padding-top: 14px;
-  padding-bottom: 14px;
-}
-.py-\[13px\] {
-  padding-top: 13px;
-  padding-bottom: 13px;
-}
-.px-\[-1rem\] {
-  padding-left: -1rem;
-  padding-right: -1rem;
 }
 .pb-2 {
   padding-bottom: 0.5rem;
@@ -1936,11 +1943,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pb-7 {
   padding-bottom: 1.75rem;
 }
-.pb-4 {
-  padding-bottom: 1rem;
-}
 .pl-8 {
   padding-left: 2rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
 }
 .pr-2 {
   padding-right: 0.5rem;
@@ -1999,8 +2006,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pb-16 {
   padding-bottom: 4rem;
 }
-.pt-8 {
-  padding-top: 2rem;
+.pt-\[400px\] {
+  padding-top: 400px;
 }
 .text-left {
   text-align: left;
@@ -2066,19 +2073,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1.5rem;
   line-height: 1.75rem;
 }
-.text-display-2 {
-  font-size: 3.375rem;
-  line-height: 3.75rem;
-}
-.text-\[23px\] {
-  font-size: 23px;
-}
 .text-\[22px\] {
   font-size: 22px;
 }
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+.text-display-2 {
+  font-size: 3.375rem;
+  line-height: 3.75rem;
 }
 .font-medium {
   font-weight: 500;
@@ -2234,6 +2238,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
+.text-slate-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
 .text-neutral-400 {
   --tw-text-opacity: 1;
   color: rgb(208 201 205 / var(--tw-text-opacity));
@@ -2286,10 +2294,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(240 214 199 / var(--tw-text-opacity));
 }
-.text-slate-800 {
-  --tw-text-opacity: 1;
-  color: rgb(30 41 59 / var(--tw-text-opacity));
-}
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
 }
@@ -2305,9 +2309,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .underline-offset-2 {
   text-underline-offset: 2px;
-}
-.underline-offset-1 {
-  text-underline-offset: 1px;
 }
 .opacity-70 {
   opacity: 0.7;
@@ -2686,17 +2687,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .last\:mb-0:last-child {
   margin-bottom: 0px;
 }
-.checked\:border-blue-600:checked {
-  --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity));
-}
 .checked\:border-success-500:checked {
   --tw-border-opacity: 1;
   border-color: rgb(105 151 151 / var(--tw-border-opacity));
-}
-.checked\:bg-blue-600:checked {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 .checked\:bg-success-500:checked {
   --tw-bg-opacity: 1;
@@ -3141,12 +3134,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mb-8 {
     margin-bottom: 2rem;
   }
-  .tablet\:mr-4 {
-    margin-right: 1rem;
-  }
-  .tablet\:ml-4 {
-    margin-left: 1rem;
-  }
   .tablet\:mt-96 {
     margin-top: 24rem;
   }
@@ -3185,6 +3172,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:mt-24 {
     margin-top: 6rem;
+  }
+  .tablet\:mr-4 {
+    margin-right: 1rem;
+  }
+  .tablet\:ml-4 {
+    margin-left: 1rem;
   }
   .tablet\:mb-20 {
     margin-bottom: 5rem;
@@ -3237,6 +3230,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:max-w-lg {
     max-width: 32rem;
   }
+  .tablet\:max-w-\[260px\] {
+    max-width: 260px;
+  }
   .tablet\:max-w-\[415px\] {
     max-width: 415px;
   }
@@ -3245,18 +3241,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:max-w-\[120px\] {
     max-width: 120px;
-  }
-  .tablet\:max-w-\[355px\] {
-    max-width: 355px;
-  }
-  .tablet\:max-w-\[300px\] {
-    max-width: 300px;
-  }
-  .tablet\:max-w-\[250px\] {
-    max-width: 250px;
-  }
-  .tablet\:max-w-\[260px\] {
-    max-width: 260px;
   }
   .tablet\:flex-\[0_1_auto\] {
     flex: 0 1 auto;
@@ -3302,9 +3286,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:flex-wrap {
     flex-wrap: wrap;
   }
-  .tablet\:flex-wrap-reverse {
-    flex-wrap: wrap-reverse;
-  }
   .tablet\:items-end {
     align-items: flex-end;
   }
@@ -3345,6 +3326,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:p-16 {
     padding: 4rem;
   }
+  .tablet\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   .tablet\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
@@ -3372,10 +3357,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:py-\[52px\] {
     padding-top: 52px;
     padding-bottom: 52px;
-  }
-  .tablet\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
   }
   .tablet\:pt-0 {
     padding-top: 0px;
@@ -3436,10 +3417,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1.5rem;
     line-height: 2rem;
   }
-  .tablet\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
   .tablet\:leading-4 {
     line-height: 1rem;
   }
@@ -3499,20 +3476,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:z-0 {
     z-index: 0;
   }
+  .laptop\:col-span-10 {
+    grid-column: span 10 / span 10;
+  }
   .laptop\:col-span-12 {
     grid-column: span 12 / span 12;
   }
-  .laptop\:col-span-10 {
-    grid-column: span 10 / span 10;
+  .laptop\:col-start-3 {
+    grid-column-start: 3;
   }
   .laptop\:col-start-2 {
     grid-column-start: 2;
   }
   .laptop\:col-start-8 {
     grid-column-start: 8;
-  }
-  .laptop\:col-start-3 {
-    grid-column-start: 3;
   }
   .laptop\:col-end-\[8\] {
     grid-column-end: 8;
@@ -3637,11 +3614,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:max-w-\[700px\] {
     max-width: 700px;
   }
+  .laptop\:max-w-\[355px\] {
+    max-width: 355px;
+  }
   .laptop\:max-w-\[350px\] {
     max-width: 350px;
   }
-  .laptop\:max-w-\[355px\] {
-    max-width: 355px;
+  .laptop\:max-w-\[410px\] {
+    max-width: 410px;
   }
   .laptop\:flex-\[1_1_50\%\] {
     flex: 1 1 50%;
@@ -3752,17 +3732,13 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1.5rem;
     line-height: 1.75rem;
   }
-  .laptop\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-  .laptop\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
   .laptop\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+  .laptop\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
   .laptop\:font-semibold {
     font-weight: 600;
@@ -3830,6 +3806,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:col-span-8 {
     grid-column: span 8 / span 8;
   }
+  .desktop\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }
   .desktop\:col-span-3 {
     grid-column: span 3 / span 3;
   }
@@ -3847,6 +3826,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:col-start-4 {
     grid-column-start: 4;
+  }
+  .desktop\:col-start-6 {
+    grid-column-start: 6;
   }
   .desktop\:col-start-1 {
     grid-column-start: 1;
@@ -4025,13 +4007,13 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1rem;
     line-height: 1.5rem;
   }
-  .desktop\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
-  }
   .desktop\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+  .desktop\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
   }
   .desktop\:leading-6 {
     line-height: 1.5rem;
