--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -432,6 +432,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-color: var(--secondary-500);
 }
+.btn-small {
+  flex: 0 1 auto;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 .btn-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(159 98 98 / var(--tw-bg-opacity));
@@ -452,6 +459,44 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-color: var(--primary-plum-600);
+}
+.btn-sage-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(208 216 217 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.btn-sage-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(208 216 217 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(208 216 217 / var(--tw-ring-opacity));
+}
+.btn-sage-200:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(13 148 136 / var(--tw-ring-opacity));
+}
+.btn-disabled-sage-200 {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.btn-disabled-sage-200:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(208 216 217 / var(--tw-bg-opacity));
+}
+.btn-disabled-sage-200:hover:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(208 216 217 / var(--tw-bg-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-offset-width: 0px;
 }
 .btn-teal {
   --tw-bg-opacity: 1;
@@ -850,6 +895,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: auto;
   margin-right: auto;
 }
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
 .mx-\[-1rem\] {
   margin-left: -1rem;
   margin-right: -1rem;
@@ -877,10 +926,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
-}
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
 }
 .mt-10 {
   margin-top: 2.5rem;
@@ -1017,20 +1062,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-20 {
   margin-top: 5rem;
 }
-.mt-52 {
-  margin-top: 13rem;
+.mt-\[75\%\] {
+  margin-top: 75%;
 }
 .-ml-1 {
   margin-left: -0.25rem;
-}
-.mt-\[50\%\] {
-  margin-top: 50%;
-}
-.mt-\[60\%\] {
-  margin-top: 60%;
-}
-.mt-\[75\%\] {
-  margin-top: 75%;
 }
 .block {
   display: block;
@@ -1152,14 +1188,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[30px\] {
   width: 30px;
 }
-.w-\[70\%\] {
-  width: 70%;
+.w-\[100\%\] {
+  width: 100%;
 }
 .w-\[42px\] {
   width: 42px;
-}
-.w-\[100\%\] {
-  width: 100%;
 }
 .w-\[1161px\] {
   width: 1161px;
@@ -1175,9 +1208,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-\[24px\] {
   width: 24px;
-}
-.w-\[22px\] {
-  width: 22px;
 }
 .w-\[54px\] {
   width: 54px;
@@ -1260,8 +1290,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[12px\] {
   max-width: 12px;
 }
-.max-w-\[1450px\] {
-  max-width: 1450px;
+.max-w-\[1475px\] {
+  max-width: 1475px;
 }
 .max-w-\[350px\] {
   max-width: 350px;
@@ -1326,8 +1356,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[481px\] {
   max-width: 481px;
 }
-.max-w-\[300px\] {
-  max-width: 300px;
+.max-w-\[400px\] {
+  max-width: 400px;
 }
 .max-w-\[110px\] {
   max-width: 110px;
@@ -1337,9 +1367,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-w-\[347px\] {
   max-width: 347px;
-}
-.max-w-\[1475px\] {
-  max-width: 1475px;
 }
 .flex-\[1\] {
   flex: 1;
@@ -1645,17 +1672,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(252 250 251 / var(--tw-bg-opacity));
 }
-.bg-primary-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 227 220 / var(--tw-bg-opacity));
-}
-.bg-slate-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
 .bg-sage-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(208 216 217 / var(--tw-bg-opacity));
+}
+.bg-primary-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 227 220 / var(--tw-bg-opacity));
 }
 .bg-primary-500 {
   --tw-bg-opacity: 1;
@@ -1843,10 +1866,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 38px;
   padding-right: 38px;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1870,6 +1889,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-9 {
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .py-\[1\.13rem\] {
   padding-top: 1.13rem;
@@ -1909,11 +1932,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pb-\[92\%\] {
   padding-bottom: 92%;
 }
+.pt-16 {
+  padding-top: 4rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
+}
 .pb-12 {
   padding-bottom: 3rem;
-}
-.pl-8 {
-  padding-left: 2rem;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
@@ -1935,6 +1961,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pb-7 {
   padding-bottom: 1.75rem;
+}
+.pl-8 {
+  padding-left: 2rem;
 }
 .pb-4 {
   padding-bottom: 1rem;
@@ -1995,12 +2024,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pb-16 {
   padding-bottom: 4rem;
-}
-.pb-8 {
-  padding-bottom: 2rem;
-}
-.pt-16 {
-  padding-top: 4rem;
 }
 .text-left {
   text-align: left;
@@ -2286,6 +2309,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-primary-200 {
   --tw-text-opacity: 1;
   color: rgb(240 214 199 / var(--tw-text-opacity));
+}
+.text-sage-400 {
+  --tw-text-opacity: 1;
+  color: rgb(149 167 170 / var(--tw-text-opacity));
 }
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
@@ -2978,6 +3005,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:top-\[70\%\] {
     top: 70%;
   }
+  .tablet\:top-\[7\%\] {
+    top: 7%;
+  }
   .tablet\:top-auto {
     top: auto;
   }
@@ -3081,10 +3111,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-top: 0px;
     margin-bottom: 0px;
   }
-  .tablet\:mx-4 {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
   .tablet\:my-20 {
     margin-top: 5rem;
     margin-bottom: 5rem;
@@ -3130,14 +3156,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mb-8 {
     margin-bottom: 2rem;
   }
+  .tablet\:mb-0 {
+    margin-bottom: 0px;
+  }
+  .tablet\:mr-4 {
+    margin-right: 1rem;
+  }
+  .tablet\:ml-4 {
+    margin-left: 1rem;
+  }
   .tablet\:mt-96 {
     margin-top: 24rem;
   }
   .tablet\:mr-6 {
     margin-right: 1.5rem;
-  }
-  .tablet\:mb-0 {
-    margin-bottom: 0px;
   }
   .tablet\:mb-4 {
     margin-bottom: 1rem;
@@ -3168,12 +3200,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:mt-24 {
     margin-top: 6rem;
-  }
-  .tablet\:mr-4 {
-    margin-right: 1rem;
-  }
-  .tablet\:ml-4 {
-    margin-left: 1rem;
   }
   .tablet\:mb-20 {
     margin-bottom: 5rem;
@@ -3229,20 +3255,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:max-w-\[415px\] {
     max-width: 415px;
   }
+  .tablet\:max-w-\[300px\] {
+    max-width: 300px;
+  }
   .tablet\:max-w-\[180px\] {
     max-width: 180px;
   }
   .tablet\:max-w-\[120px\] {
     max-width: 120px;
-  }
-  .tablet\:max-w-\[400px\] {
-    max-width: 400px;
-  }
-  .tablet\:max-w-\[350px\] {
-    max-width: 350px;
-  }
-  .tablet\:max-w-\[300px\] {
-    max-width: 300px;
   }
   .tablet\:flex-\[0_1_auto\] {
     flex: 0 1 auto;
@@ -3258,9 +3278,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:flex-auto {
     flex: 1 1 auto;
-  }
-  .tablet\:flex-\[0_1_45\%\] {
-    flex: 0 1 45%;
   }
   .tablet\:translate-x-\[-50\%\] {
     --tw-translate-x: -50%;
@@ -3331,6 +3348,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:p-16 {
     padding: 4rem;
   }
+  .tablet\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+  .tablet\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
   .tablet\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -3351,10 +3376,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
   }
-  .tablet\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
   .tablet\:px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -3362,10 +3383,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:py-\[52px\] {
     padding-top: 52px;
     padding-bottom: 52px;
-  }
-  .tablet\:py-16 {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
   }
   .tablet\:pt-0 {
     padding-top: 0px;
@@ -3440,15 +3457,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:first\:pr-7:first-child {
     padding-right: 1.75rem;
-  }
-  .tablet\:odd\:ml-4:nth-child(odd) {
-    margin-left: 1rem;
-  }
-  .tablet\:odd\:mr-4:nth-child(odd) {
-    margin-right: 1rem;
-  }
-  .tablet\:even\:mr-4:nth-child(even) {
-    margin-right: 1rem;
   }
 }
 @media (min-width: 1024px) {
@@ -3533,14 +3541,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-left: 40px;
     margin-right: 40px;
   }
-  .laptop\:mx-4 {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-  .laptop\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
   .laptop\:mb-8 {
     margin-bottom: 2rem;
   }
@@ -3592,11 +3592,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:ml-4 {
     margin-left: 1rem;
   }
-  .laptop\:mr-8 {
-    margin-right: 2rem;
-  }
   .laptop\:mr-4 {
     margin-right: 1rem;
+  }
+  .laptop\:mr-8 {
+    margin-right: 2rem;
   }
   .laptop\:flex {
     display: flex;
@@ -3612,12 +3612,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:w-auto {
     width: auto;
-  }
-  .laptop\:w-\[70\%\] {
-    width: 70%;
-  }
-  .laptop\:w-\[90\%\] {
-    width: 90%;
   }
   .laptop\:min-w-\[1009px\] {
     min-width: 1009px;
@@ -3649,17 +3643,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:max-w-\[350px\] {
     max-width: 350px;
   }
-  .laptop\:max-w-\[410px\] {
-    max-width: 410px;
-  }
-  .laptop\:max-w-\[400px\] {
-    max-width: 400px;
-  }
   .laptop\:max-w-\[375px\] {
     max-width: 375px;
   }
-  .laptop\:flex-1 {
-    flex: 1 1 0%;
+  .laptop\:max-w-\[410px\] {
+    max-width: 410px;
   }
   .laptop\:flex-\[1_1_50\%\] {
     flex: 1 1 50%;
@@ -3702,6 +3690,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:bg-inherit {
     background-color: inherit;
   }
+  .laptop\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   .laptop\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -3714,21 +3706,9 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-left: 5rem;
     padding-right: 5rem;
   }
-  .laptop\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
   .laptop\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-  }
-  .laptop\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-  .laptop\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
   }
   .laptop\:pb-7 {
     padding-bottom: 1.75rem;
@@ -3759,12 +3739,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:pb-16 {
     padding-bottom: 4rem;
-  }
-  .laptop\:pl-8 {
-    padding-left: 2rem;
-  }
-  .laptop\:pb-12 {
-    padding-bottom: 3rem;
   }
   .laptop\:text-left {
     text-align: left;
@@ -3858,6 +3832,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:col-span-8 {
     grid-column: span 8 / span 8;
   }
+  .desktop\:col-span-full {
+    grid-column: 1 / -1;
+  }
   .desktop\:col-span-4 {
     grid-column: span 4 / span 4;
   }
@@ -3869,9 +3846,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:col-span-12 {
     grid-column: span 12 / span 12;
-  }
-  .desktop\:col-span-full {
-    grid-column: 1 / -1;
   }
   .desktop\:col-start-2 {
     grid-column-start: 2;
@@ -3906,13 +3880,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:col-end-\[14\] {
     grid-column-end: 14;
   }
-  .desktop\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
   .desktop\:my-20 {
     margin-top: 5rem;
     margin-bottom: 5rem;
+  }
+  .desktop\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
   }
   .desktop\:mt-24 {
     margin-top: 6rem;
@@ -3953,9 +3927,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:mt-32 {
     margin-top: 8rem;
   }
-  .desktop\:mt-16 {
-    margin-top: 4rem;
-  }
   .desktop\:flex {
     display: flex;
   }
@@ -3968,11 +3939,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:w-\[138px\] {
     width: 138px;
   }
-  .desktop\:w-\[760px\] {
-    width: 760px;
-  }
   .desktop\:w-\[70\%\] {
     width: 70%;
+  }
+  .desktop\:w-\[760px\] {
+    width: 760px;
   }
   .desktop\:min-w-\[1265px\] {
     min-width: 1265px;
@@ -4023,6 +3994,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:p-\[45px\] {
     padding: 45px;
   }
+  .desktop\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .desktop\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
   .desktop\:px-9 {
     padding-left: 2.25rem;
     padding-right: 2.25rem;
@@ -4051,13 +4030,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-left: 3rem;
     padding-right: 3rem;
   }
-  .desktop\:px-8 {
+  .desktop\:pl-8 {
     padding-left: 2rem;
-    padding-right: 2rem;
-  }
-  .desktop\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
   }
   .desktop\:pr-0 {
     padding-right: 0px;
@@ -4067,24 +4041,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:pr-24 {
     padding-right: 6rem;
-  }
-  .desktop\:pl-8 {
-    padding-left: 2rem;
-  }
-  .desktop\:pb-12 {
-    padding-bottom: 3rem;
-  }
-  .desktop\:pt-0 {
-    padding-top: 0px;
-  }
-  .desktop\:pt-8 {
-    padding-top: 2rem;
-  }
-  .desktop\:pl-12 {
-    padding-left: 3rem;
-  }
-  .desktop\:pt-12 {
-    padding-top: 3rem;
   }
   .desktop\:text-center {
     text-align: center;
