--- a/styles/app.css
+++ b/styles/app.css
@@ -70,12 +70,24 @@ button {
     @apply no-underline text-primary-600 font-semibold px-6 py-4 rounded-lg hover:ring ring-offset-4 text-base outline-none duration-200 ease-in-out flex flex-1 flex-row justify-center items-center bg-secondary-400 hover:text-primary-600 hover:ring-secondary-400 hover:bg-secondary-400 ring-offset-neutral-50 active:ring-secondary-500 active:ring active:bg-secondary-500 active:scale-[.97];
   }
 
+  .btn-small {
+    @apply py-2 px-4 flex-initial;
+  }
+
   .btn-disabled-outline {
     @apply disabled:ring disabled:ring-neutral-500 disabled:hover:bg-neutral-500 disabled:hover:ring-neutral-500 transform disabled:bg-neutral-500;
   }
 
   .btn-primary {
     @apply bg-primary-400 text-white hover:text-white hover:bg-primary-500 hover:ring-primary-500 active:ring-primary-600 active:ring active:bg-primary-600;
+  }
+
+  .btn-sage-200 {
+    @apply bg-sage-200 text-white hover:text-white hover:bg-sage-200 hover:ring-sage-200 active:ring-teal-600 active:ring active:bg-teal-600;
+  }
+
+  .btn-disabled-sage-200 {
+    @apply disabled:hover:bg-sage-200 disabled:hover:ring-0 transform disabled:bg-sage-200 disabled:hover:ring-offset-0;
   }
 
   .btn-teal {
